fixed flickering position of charts

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -733,6 +733,22 @@
   dd.error {
     padding: 4px;
   }
+
+  .chart_container {
+    .outer-center {
+      float: right;
+      right: 50%;
+      position: relative;
+    }
+    .inner-center {
+      float: right;
+      right: -50%;
+      position: relative;
+    }
+    .clear {
+      clear: both;
+    }
+  }
 }
 
 .minipalette {
